--- a/loginyj.html
+++ b/loginyj.html
@@ -45,6 +45,7 @@
 
   </div>
 
-  <script type="module" src="loginyj.js"></script>
+  <script type="module" src="./loginyj.js"></script>
 </body>
 </html>
+
