--- a/YJGAME.html
+++ b/YJGAME.html
@@ -54,6 +54,7 @@
   </main>
 
   <!-- JS -->
-  <script type="module" src="game.js"></script>
+  <script type="module" src="./game.js"></script>
 </body>
 </html>
+
