--- a/YJGAME.html
+++ b/YJGAME.html
@@ -5,7 +5,7 @@
   <title>Agencia Creativa Tycoon</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-  <link rel="stylesheet" href="game.css" />
+  <link rel="stylesheet" href="./game.css" />
 </head>
 
 <body>
@@ -57,4 +57,3 @@
   <script type="module" src="./game.js"></script>
 </body>
 </html>
-
